<resources>
    <string name="app_name">Balaji Home Makers</string>
    <string name="loginto">Login</string>
    <string name="createnewaccount">New Customer</string>
    <string name="hintemail">Enter Email</string>
    <string name="forgotpassword">Forgot Password</string>
    <string name="gotoregister">Go to Register</string>
    <string name="login">LOGIN</string>
    <string name="password">Enter Password</string>
    <string name="enteremail">Enter Email</string>
    <string name="entername">Enter Name</string>
    <string name="save">Save</string>
    <string name="home">Home</string>
    <string name="profile">My Account</string>
    <string name="my_cart">My Cart</string>
    <string name="my_orders">My Orders</string>
    <string name="my_lorders">My Listing Orders</string>
    <string name="my_products">My Products</string>
    <string name="Logout">Logout</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Balaji Home Makers</string>
    <string name="nav_header_subtitle">balajihomemakers@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main2">MainActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="reset">Reset</string>
</resources>