<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/home" />

        <item
            android:id="@+id/nav_cart"
            android:icon="@drawable/cart_icon"
            android:title="@string/my_cart" />
        <item
            android:id="@+id/nav_orders"
            android:icon="@drawable/ic_subject"
            android:title="@string/my_orders" />

        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_nav_logout"
            android:title="@string/Logout"/>

    </group>



</menu>
















